Resolve highlighting and contrast issues

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,11 +3,11 @@
 :root {
   --foreground-color: #{$nord6};
   --background-color: #{$nord0};
-  --highlight-color: #{$nord9};
-  --border-color: #{$nord1};
+  --highlight-color: #{$nord2};
+  --border-color: #{$nord2};
 
   --contrast-background-color: #{$nord1};
-  --secondary-background-color: var(--background-color);
+  --secondary-background-color: #{$nord1};
 
   // Column Menus
   --sn-component-foreground-color: var(--foreground-color);
@@ -19,8 +19,8 @@
   // StyleKit Vars
   --sn-stylekit-shadow-color: #{$nord2};
 
-  --sn-stylekit-info-color: var(--highlight-color);
-  --sn-stylekit-info-contrast-color: #{$nord0};
+  --sn-stylekit-info-color: #{$nord9};
+  --sn-stylekit-info-contrast-color: #{$nord1};
   --sn-stylekit-info-color-darkened: #{$nord10};
 
   --sn-stylekit-neutral-color: #{$nord3};
@@ -44,7 +44,7 @@
 
   --sn-stylekit-contrast-background-color: var(--contrast-background-color);
   --sn-stylekit-contrast-foreground-color: #{$nord4};
-  --sn-stylekit-contrast-border-color: transparent;
+  --sn-stylekit-contrast-border-color: var(--border-color);
 
   --sn-stylekit-secondary-background-color: var(--secondary-background-color);
   --sn-stylekit-secondary-foreground-color: #{$nord4};
@@ -64,6 +64,12 @@
   --sn-stylekit-scrollbar-track-border-color: var(--border-color);
   --sn-stylekit-scrollbar-thumb-color: var(--sn-stylekit-info-color);
 
+  --navigation-item-selected-background-color: var(--highlight-color);
+
+  --sn-stylekit-passive-color-0: var(--sn-stylekit-neutral-color);
+  --sn-stylekit-passive-color-3: var(--sn-stylekit-contrast-border-color);
+  --sn-stylekit-passive-color-4: var(--sn-stylekit-neutral-color);
+  --sn-stylekit-passive-color-5: var(--sn-stylekit-secondary-background-color);
   // Notes column
   // Ensure the color of the selected note
   #notes-column .note.selected,
